# studyLinux

linuxBook/: a  bill.c  fred.c  lib.h  linuxstudy.c  myapp  opencvmy.c  program  program.c  txt
linuxBook/11/: makefile  myapp  myprocess.c
linuxBook/12/: 122.c  123.c  124mutex.c  124signal.c  makefile122  makefile123  makefile124mutex  makefile124signal  myapp
linuxBook/13/: 132.c  133.c  134.c  makefile  makefile132  makefile133  myapp  (+1 more)
mavlink-master/: CMakeCache.txt
opencv/: myssh.sh
opencv/myof/: CMakeCache.txt  CMakeLists.txt  Makefile  MotionDetect.cpp  cmake_install.cmake  myapp  myof.sublime-workspace  xtofAffine2D.cpp  xtofAffine2D.h  xtofCalcPyrlk.cpp  xtofCalcPyrlk.h  xtofCameraCorrect.cpp  xtofCameraCorrect.h  xtofCameraHeight.cpp  xtofCameraHeight.h  xtofFindCorner.cpp  xtofReadSonar.h  xtofglobal.h  xtofmavlinktest.cpp  xtofmavlinktest.h
opencv/myof/mavlink/: mavlink_types.h
opencv/myof/mavlink/common/: common.h
opencv/myofcode/: CMakeCache.txt  CMakeLists.txt  GpsParse.h  Makefile  MotionDetect.cpp  RMcmake.sh  cmake_install.cmake  debug.cpp  debug.h  mavlink_bridge.h  myapp  readme.txt  xtofAffine2D.cpp  xtofAffine2D.h  xtofCalcPyrlk.cpp  xtofCalcPyrlk.h  xtofCameraCorrect.cpp  xtofCameraCorrect.h  xtofCameraHeight.cpp  xtofFindCorner.cpp  xtofFindCorner.h  xtofReadSonar.c  xtofReadSonar.h  xtofglobal.h  xtofmavlinktest.cpp  xtofmavlinktest.h
opencv/myofcode/mavlink/: mavlink_bridge.h
opencv/myofcode/mavlink/common/: mavlink.h  version.h
opencv/opencvLearn/: CMakeCache.txt  CMakeLists.txt  Makefile  accessTime.cpp  accessTime.h  cmake_install.cmake  main.cpp  myapp
shell/: cd28.sh  learnshell.sh
video/: video.avi
xt/: 移植.txt
xt/MotionDetect2.0/: CMakeLists.txt  MotionDetect  MotionDetect.cpp  PilotData.c  PilotData.h  xtofAffine2D.h  xtofCalcPyrlk.cpp  xtofCalcPyrlk.h  xtofCameraHeight.h  xtofFindCorner.cpp  xtofglobal.h
(+330 files in other folders)
