cmake_minimum_required(VERSION 2.8)
project( MotionDetect )
find_package( OpenCV REQUIRED )
set(SRC_LIST MotionDetect.cpp xtofAffine2D.cpp PilotData.c xtofCalcPyrlk.cpp xtofCameraCorrect.cpp xtofCameraHeight.cpp xtofFindCorner.cpp)
add_executable( MotionDetect ${SRC_LIST} )
target_link_libraries( MotionDetect ${OpenCV_LIBS} )
